fixed alignment (hopefully)

--- a/apps/front/static/front/css/index.css
+++ b/apps/front/static/front/css/index.css
@@ -42,7 +42,7 @@ div#app {
 }
 
 .status {
-    width: 125px;
+    width: 160px;
 }
 
 .game {
